# models/orderdetail.go
@@ -4,9 +4,9 @@ package models
 type OrderDetail struct {
 	ID        uint     `json:"id" gorm:"primaryKey"`
 	OrderID   uint     `json:"order_id"`
-	Order     *Order   `json:"order" gorm:"foreignKey:OrderID"`
+	Order     *Order   `json:"order" gorm:"foreignKey:OrderID;constraint:OnUpdate:CASCADE,OnDelete:CASCADE"`
 	ProductID uint     `json:"product_id"`
-	Product   *Product `json:"product" gorm:"foreignKey:ProductID"`
+	Product   *Product `json:"product" gorm:"foreignKey:ProductID;constraint:OnUpdate:CASCADE,OnDelete:CASCADE"`
 	Quantity  int      `json:"quantity"`
 	Price     float64  `json:"price"`
 }
