# models/payment.go
@@ -6,7 +6,7 @@ import "time"
 type Payment struct {
 	ID        uint       `json:"id" gorm:"primaryKey"`
 	OrderID   uint       `json:"order_id"`
-	Order     *Order     `json:"order" gorm:"foreignKey:OrderID"`
+	Order     *Order     `json:"order" gorm:"foreignKey:OrderID;constraint:OnUpdate:CASCADE,OnDelete:CASCADE"`
 	Amount    float64    `json:"amount"`
 	Method    string     `json:"method"` // Ví điện tử, thẻ, tiền mặt
 	Status    string     `json:"status"` // pending, completed, failed
