# models/product.go
@@ -4,12 +4,14 @@ import "time"
 
 // sản phẩm
 type Product struct {
-	ID          uint       `json:"id" gorm:"primaryKey"`
-	Name        string     `json:"name"`
-	Description string     `json:"description"`
-	Price       float64    `json:"price"`
-	Stock       int        `json:"stock"`
-	CategoryID  uint       `json:"category_id"`
-	Category    *Category  `json:"category" gorm:"foreignKey:CategoryID"`
-	CreatedAt   *time.Time `json:"created_at"`
+	ID          uint    `json:"id" gorm:"primaryKey"`
+	Name        string  `json:"name"`
+	Description string  `json:"description"`
+	Price       float64 `json:"price"`
+	Stock       int     `json:"stock"`
+	Hinh        string  `json:"hinh"`
+	CategoryID  uint    `json:"category_id"`
+	//Category    *Category  `json:"category" gorm:"foreignKey:CategoryID;constraint:OnUpdate:CASCADE,OnDelete:CASCADE"`
+	CreatedAt *time.Time `json:"created_at"`
+	UpdatedAt *time.Time `json:"updated_at"`
 }
