# models/shippingmethod.go
@@ -6,6 +6,6 @@ import "time"
 type ShippingMethod struct {
 	ID        uint       `json:"id" gorm:"primaryKey"`
 	Name      string     `json:"name"`
-	Orders    []Order    `json:"orders" gorm:"foreignKey:ShippingMethodID"`
+	Orders    []Order    `json:"orders" gorm:"foreignKey:ShippingMethodID;constraint:OnUpdate:CASCADE,OnDelete:CASCADE"`
 	CreatedAt *time.Time `json:"created_at"`
 }
